# slog-bench

./: Cargo.toml
src/: main.rs
