[package]
name = "slog-bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = { version = "=2.5.2", features = ["max_level_trace", "release_max_level_debug"] }
slog-async = "=2.3"
slog-global = { version = "=0.1.0", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
slog_derive = "=0.2.0"
slog-term = "=2.4.1"
